# aplicacoes_apoio_censo_escolar

./: .gitignore  LICENSE  README.md  app.py  packages.txt  prompt_design_sistema.md  pyproject.toml  requirements.txt
apps/coleta_cadastros_escolas/docs/: modelo_coleta_gestor.xlsx
apps/coleta_cadastros_escolas/src/: auth.py  frontend.py  modelo.py  scraper.py
apps/coleta_gestor/docs/: modelo_coleta_gestor.xlsx
apps/coleta_gestor/src/: exporter.py  frontend.py  gestor_scraper.py  modelo.py
apps/coleta_recibos_fechamento/src/: auth.py  config.py  frontend.py  receipt_scraper.py  zipper.py
apps/coleta_relatorios/src/: auth.py  frontend.py  report_scraper.py  reports.py  upload.py  zipper.py
apps/divisor_profissionais/: divisor_prof.py
apps/divisor_turmas/: divisor.py
apps/inicio/: inicio.py
apps/web_scrapling/docs/: modelo_coleta.xlsx
apps/web_scrapling/src/: exporter.py  scraper.py  sheets.py  upload.py
tests/security/: conftest.py  test_cookies.py  test_http_methods.py  test_info_disclosure.py  test_security_headers.py  test_tls_transport.py
